# coding-model-eval

./: .gitignore  README.md  modal_runner.py  post-mortem.md  pyproject.toml
eval/: fim_loaders.py  loaders.py  mbpp_loader.py  multi_turn.py  report.py  runner.py  sandbox.py
results/: _evalplus_crosscheck_ds_instruct.json  _evalplus_crosscheck_mellum_sft.json  calibration_temperature.jsonl  ds_base_canonical_poisoning.jsonl  ds_base_he_infill_single.jsonl  ds_base_mbpp_singleturn.jsonl  ds_base_multiturn.jsonl  ds_base_multiturn_nohint.jsonl  ds_base_regression.jsonl  ds_base_regression_nohint.jsonl  ds_base_singleturn.jsonl  ds_instruct_canonical_poisoning.jsonl  ds_instruct_he_infill_single.jsonl  ds_instruct_hintsweep_minimal.jsonl  ds_instruct_hintsweep_post.jsonl  ds_instruct_hintsweep_traceback.jsonl  ds_instruct_mbpp_singleturn.jsonl  ds_instruct_multiturn.jsonl  ds_instruct_multiturn_nohint.jsonl  ds_instruct_regression.jsonl  ds_instruct_regression_nohint.jsonl  ds_instruct_singleturn.jsonl  mellum_base_fim.jsonl  mellum_base_he_infill_light.jsonl  mellum_base_he_infill_single.jsonl  mellum_base_singleturn.jsonl  mellum_dpo_canonical_poisoning.jsonl  mellum_dpo_he_infill_single.jsonl  mellum_dpo_multiturn.jsonl  mellum_dpo_regression.jsonl  mellum_dpo_regression_nohint.jsonl  mellum_dpo_singleturn.jsonl  mellum_sft_canonical_poisoning.jsonl  mellum_sft_he_infill_single.jsonl  mellum_sft_he_infill_single_recovery.jsonl  mellum_sft_hintsweep_minimal.jsonl  mellum_sft_hintsweep_post.jsonl  mellum_sft_hintsweep_traceback.jsonl  mellum_sft_mbpp_singleturn.jsonl  (+7 more)
(+23 files in other folders)
